<resources>
    <string name="app_name" translatable="false">MyMediaLists</string>
    <string name="app_developer" translatable="false">amsamu</string>
    <string name="app_developer_link" translatable="false">https://github.com/amsamu</string>
    <string name="license_abrv_gpl_3" translatable="false">GPLv3</string>
    <string name="app_license_link" translatable="false">https://www.gnu.org/licenses/gpl-3.0.en.html#license-text</string>
    <string name="app_source_code_link" translatable="false">https://github.com/amsamu/MyMediaLists</string>
    <string name="app_privacy_policy_link" translatable="false">https://github.com/amsamu/MyMediaLists</string>
    <string name="app_icon_credits_link" translatable="false">https://www.flaticon.com/free-icons/criteria</string>
    <string name="gson_license_link" translatable="false">https://github.com/google/gson/blob/main/LICENSE</string>
    <string name="gson_with_version" translatable="false">Gson 2.10.1</string>
    <string name="gson_copy_and_license" translatable="false">© 2008 Google Inc., ALv2</string>

    <string name="welcome_msg">Welcome to MyMediaLists home page</string>
    <string name="new_list">New list</string>
    <string name="nav_menu_open">Open</string>
    <string name="nav_menu_close">Close</string>
    <string name="save">Save</string>
    <string name="main_activity_title">Home page</string>
    <string name="display_list_activity_title">List</string>
    <string name="fab_content_desc">Add new entry to the list</string>
    <string name="entry_details_activity_title">New entry</string>
    <string name="name_hint">Name</string>
    <string name="release_year_hint">Release year</string>
    <string name="sort_by">Sort by</string>
    <string name="entry_name">Entry name</string>
    <string name="status">Status</string>
    <string name="sort_ascending">Sort ascending</string>
    <string name="sort_descending">Sort descending</string>
    <string name="rename_list">Rename list</string>
    <string name="delete_list">Delete list</string>
    <string name="lists">Lists</string>
    <string name="question_delete_list">Delete this list?</string>
    <string name="message_delete_list">This list and all of its contained entries will be deleted permanently! You won\'t be able to recover them afterwards.</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="list_deleted">List and containing entries deleted</string>
    <string name="delete_entry">Delete entry</string>
    <string name="question_delete_entry">Delete this entry?</string>
    <string name="message_delete_entry">This entry will be deleted permanently! You won\'t be able to recover it afterwards.</string>
    <string name="entry_deleted">Entry deleted</string>
    <string name="select_date">Select date</string>
    <string name="author_hint">Author</string>
    <string name="publisher_hint">Publisher</string>
    <string name="start_date_hint">Start date</string>
    <string name="finish_date_hint">Finish date</string>
    <string name="carrousel_title">Ongoing</string>
    <string name="entry_updated">Entry details updated</string>
    <string name="entry_created">New entry created</string>
    <string name="entry_details">Entry details</string>
    <string name="must_fill_entry_name">Add a name to save this entry as.</string>
    <string name="must_fill_list_name">Add a name to save this list as.</string>
    <string name="ok">OK</string>
    <string name="list_updated">List name updated</string>
    <string name="list_created">New list created</string>
    <string name="author_prefix">"by"</string>
    <string name="empty_list_text">Add entries to this list to see them here.</string>
    <string name="empty_ongoing_carousel_text">Set entries\' status as Ongoing to see them here.</string>
    <string name="list_name">List name</string>
    <string name="ongoing">Ongoing</string>
    <string name="completed">Completed</string>
    <string name="planned">Planned</string>
    <string name="dropped">Dropped</string>
    <string name="onhold">On hold</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="export_text">Export lists database</string>
    <string name="import_text">Import lists database</string>
    <string name="exported">Database exported</string>
    <string name="cant_import">The file format isn\'t correct</string>
    <string name="question_import_dabase">Import this database?</string>
    <string name="message_confirm_import">If you import a new database from a file, your current database with all of your lists and entries will be deleted!</string>
    <string name="do_import">Import</string>
    <string name="imported">New database imported</string>
    <string name="options">Options</string>
    <string name="exporting">Preparing exportation...</string>
    <string name="about">About</string>
    <string name="about_app">About this app</string>
    <string name="developed_by">"developed by "</string>
    <string name="license">License</string>
    <string name="source_code">Source code</string>
    <string name="third_party_licenses">Third party licenses</string>
    <string name="see_on_github">See on GitHub</string>
    <string name="app_icon">App icon</string>
    <string name="icons">Icons</string>
    <string name="app_icon_attribution">Criteria icons created by manshagraphics - Flaticon</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="backups">Backups</string>
</resources>