<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".EntryDetailsActivity">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:liftOnScroll="true">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/topAppBar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:navigationIcon="@drawable/baseline_arrow_back_24"
                    app:title="@string/about_app" />

            </com.google.android.material.appbar.AppBarLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:animateLayoutChanges="true"
                        android:orientation="vertical">

                        <!-- HEADER: App name -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingStart="48dp"
                            android:paddingTop="48dp"
                            android:paddingEnd="48dp"
                            android:paddingBottom="12dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:fontFamily="sans-serif-condensed"
                                android:maxLines="1"
                                android:text="@string/app_name"
                                android:textAppearance="?attr/textAppearanceHeadlineLarge"
                                android:textColor="?attr/colorOnSurface" />
                        </LinearLayout>



                        <!-- HEADER: App version -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="24dp">

                            <TextView
                                android:id="@+id/app_version"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:paddingStart="12dp"
                                android:textAppearance="?attr/textAppearanceSubtitle1" />
                        </LinearLayout>

                        <!-- Author -->
                        <LinearLayout
                            android:id="@+id/app_author_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackground"
                            android:orientation="horizontal"
                            android:paddingStart="48dp"
                            android:paddingTop="12dp"
                            android:paddingEnd="48dp"
                            android:paddingBottom="12dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:paddingEnd="8dp"
                                android:text="@string/author_hint"
                                android:textAppearance="?attr/textAppearanceBodyLarge" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:text="@string/app_developer"
                                android:textAppearance="?attr/textAppearanceBodyLarge"
                                android:textColor="@color/material_dynamic_neutral60" />
                        </LinearLayout>

                        <!-- License -->
                        <LinearLayout
                            android:id="@+id/app_license_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackground"
                            android:orientation="horizontal"
                            android:paddingStart="48dp"
                            android:paddingTop="12dp"
                            android:paddingEnd="48dp"
                            android:paddingBottom="12dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:paddingEnd="8dp"
                                android:text="@string/license"
                                android:textAppearance="?attr/textAppearanceBodyLarge" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:text="@string/license_abrv_gpl_3"
                                android:textAppearance="?attr/textAppearanceBodyLarge"
                                android:textColor="@color/material_dynamic_neutral60" />
                        </LinearLayout>

                        <!-- Source code -->
                        <LinearLayout
                            android:id="@+id/app_source_code_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackground"
                            android:orientation="horizontal"
                            android:paddingStart="48dp"
                            android:paddingTop="12dp"
                            android:paddingEnd="48dp"
                            android:paddingBottom="12dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:paddingEnd="8dp"
                                android:text="@string/source_code"
                                android:textAppearance="?attr/textAppearanceBodyLarge" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:text="@string/see_on_github"
                                android:textAppearance="?attr/textAppearanceBodyLarge"
                                android:textColor="@color/material_dynamic_neutral60" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/app_privacy_policy_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackground"
                            android:orientation="horizontal"
                            android:paddingStart="48dp"
                            android:paddingTop="12dp"
                            android:paddingEnd="48dp"
                            android:paddingBottom="12dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:paddingEnd="8dp"
                                android:text="@string/privacy_policy"
                                android:textAppearance="?attr/textAppearanceBodyLarge" />
                        </LinearLayout>


                        <!-- ICONS CREDITS -->
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackground"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:paddingStart="36dp"
                            android:paddingTop="24dp"
                            android:paddingBottom="12dp"
                            android:text="@string/icons"
                            android:textAppearance="?attr/textAppearanceSubtitle2"
                            android:textColor="?attr/colorControlNormal" />

                        <!-- App icon -->
                        <LinearLayout
                            android:id="@+id/app_icon_credits_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackground"
                            android:orientation="vertical"
                            android:paddingStart="48dp"
                            android:paddingTop="12dp"
                            android:paddingEnd="48dp"
                            android:paddingBottom="12dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:paddingEnd="8dp"
                                android:text="@string/app_icon"
                                android:textAppearance="?attr/textAppearanceBodyLarge" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:paddingTop="4dp"
                                android:text="@string/app_icon_attribution"
                                android:textAppearance="?attr/textAppearanceSubtitle1"
                                android:textColor="@color/material_dynamic_neutral60" />
                        </LinearLayout>


                        <!-- THIRD PARTY LICENSES -->
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackground"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:paddingStart="36dp"
                            android:paddingTop="24dp"
                            android:paddingBottom="12dp"
                            android:text="@string/third_party_licenses"
                            android:textAppearance="?attr/textAppearanceSubtitle2"
                            android:textColor="?attr/colorControlNormal" />

                        <LinearLayout
                            android:id="@+id/third_party_gson_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackground"
                            android:orientation="vertical"
                            android:paddingStart="48dp"
                            android:paddingTop="12dp"
                            android:paddingEnd="48dp"
                            android:paddingBottom="12dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:paddingEnd="8dp"
                                android:text="@string/gson_with_version"
                                android:textAppearance="?attr/textAppearanceBodyLarge" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:paddingTop="4dp"
                                android:text="@string/gson_copy_and_license"
                                android:textAppearance="?attr/textAppearanceSubtitle1"
                                android:textColor="@color/material_dynamic_neutral60" />
                        </LinearLayout>


                    </LinearLayout>
                </androidx.core.widget.NestedScrollView>
            </FrameLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </LinearLayout>
</layout>