<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".EntryDetailsActivity">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:liftOnScroll="true">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/topAppBar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:navigationIcon="@drawable/baseline_arrow_back_24"
                    app:title="@string/settings" />

            </com.google.android.material.appbar.AppBarLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:animateLayoutChanges="true"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/settings_export"
                            android:clickable="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="48dp"
                            android:paddingEnd="48dp"
                            android:paddingTop="24dp"
                            android:paddingBottom="24dp"
                            android:textAppearance="?attr/textAppearanceBodyLarge"
                            android:background="?attr/selectableItemBackground"
                            android:text="@string/export_text"/>

                        <TextView
                            android:id="@+id/settings_import"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="48dp"
                            android:paddingEnd="48dp"
                            android:paddingTop="24dp"
                            android:paddingBottom="24dp"
                            android:textAppearance="?attr/textAppearanceBodyLarge"
                            android:background="?attr/selectableItemBackground"
                            android:text="@string/import_text"/>

                    </LinearLayout>
                </androidx.core.widget.NestedScrollView>
            </FrameLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </LinearLayout>
</layout>